<resources>
    <string name="app_name">Basice</string>
    <!--登陆时密码，手机号码检测-->
    <string name="toast_login_phone_empty">电话号码不能为空</string>
    <string name="toast_login_code_empty">验证码不能为空</string>
    <string name="toast_login_pwd_empty">密码不能为空</string>
    <string name="toast_login_phone_error">请输入正确的手机号</string>
    <string name="toast_emai_error">请输入正确的邮箱号</string>
    <string name="toast_login_pwd_error">请输入6-16位数字、字母或下划线</string>
    <string name="toast_login_same_pwd">密码输入不一致</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="network_err">Simulation network error</string>
    <string name="title_activity_manager_ck">ManagerCkActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_manager_tm">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tab1">合同详情</string>
    <string name="tab2">合同</string>
    <string name="tab3">产品信息</string>
    <string name="tab4">相关材料</string>
    <string name="tab5">上传报告</string>


    <string name="Input_useracc">请输入账号</string>
    <string name="Input_password">请输入密码</string>
    <string name="login">登 录</string>


    <string name="my_update_text">版本更新</string>
    <string name="my_memo_text">备忘录</string>
    <string name="my_clear_text">清除缓存</string>
    <string name="my_about_text">关于我们</string>
    <string name="my_setting_text">设置</string>
    <string name="my_out_text">退出</string>
    <string name="string_test">请输入。。。</string>

    <string name="connect_name">连接名</string>
    <string name="server_IP">服务器</string>
    <string name="port">端口</string>
    <string name="ok">确 定</string>
    <string name="sreach">搜 索</string>

    <string name="task_info">任务信息</string>
    <string name="com_info">公司信息</string>
    <string name="info_download">资料下载查看</string>
    <string name="info_get">资料收集</string>
    <string name="info_get1">实地报告</string>
    <string name="info_get2">实地图片</string>
    <string name="info_get3">已有检测报告</string>
    <string name="info_memo">备注</string>
    <string name="save">上 传</string>
    <string name="con">联系人 ：</string>
    <string name="about_main_text">
             中华全国供销合作总社北京商业机械研究所于1978年经国务院国科发字［1978］356号文批准成立，位于北京市丰台区总部基地，是直属于中华全国供销合作总社的国家级科研院所，下属单位有北京中合金诺认证中心有限公司和北京中合智盛有限公司。
        北京商业机械研究所围绕“农产品标准化”和“农产品信息追溯”应用中的关键性技术问题，致力于开发一套符合农产品标准与信息查询服务的系统平台，以信息化与互联网技术推动供销合作社传统业务的“智慧化”升级,
        力求突出特色，推动“透明云农场”在供销合作社业务领域的应用。有效提高供销合作社为农服务的规模、质量与效率。

    </string>

    <string name="about_com_addr">地址 ：</string>
    <string name="about_com_tel">电话 ：</string>
    <string name="about_com_phone">手机 ：</string>
    <string name="about_item_web_url">项目网址 ：</string>
    <string name="about_wechar">微信公众号 ：</string>
    <string name="about_email">邮箱 ：</string>

    <string name="about_com_name_info">中华全国供销合作社北京商业机械研究所</string>
    <string name="about_com_addr_info">北京市丰台区南四环西路188号十六区3号楼</string>
    <string name="about_com_tel_info">010-63611240</string>
    <string name="about_com_phone_info">186-1005-6339</string>
    <string name="about_item_web_url_info">http://www.tyunfarm.com</string>
    <string name="about_wechar_info">透明云</string>
    <string name="about_email_info">18610056339@163.com</string>

    <!--<string name="main_home_text">首页</string>-->
    <!--<string name="main_mine_text">收藏</string>-->
    <!--<string name="main_attention_text">关注</string>-->

    <array name="home_video_tab">
        <item>待完善@dream@0</item>
        <!--<item>待上传@dream@1</item>-->
        <item>已上传@dream@1</item>
    </array>

    <!--<array name="newpost_video_tab">-->
    <!--<item>美女@dream@0</item>-->
    <!--<item>搞笑@dream@1</item>-->
    <!--<item>视频@dream@2</item>-->
    <!--<item>段子@dream@3</item>-->
    <!--<item>城市@dream@4</item>-->
    <!--<item>农村@dream@5</item>-->
    <!--<item>青春@dream@6</item>-->
    <!--</array>-->

    <!--<array name="attention_video_tab">-->
    <!--<item>订阅@dream@0</item>-->
    <!--<item>关注@dream@1</item>-->
    <!--</array>-->


    <string name="title_activity_item">项目</string>
    <string name="title_activity_about">关于我们</string>

    <string name="clear">清除缓存</string>
    <string name="about">关于我们</string>
    <string name="out">退出</string>
    <string name="upload">上    传</string>
    <string name="upload1">上传</string>
    <string name="down">下载</string>
    <string name="updateVersion">版本更新</string>
    <string name="title_main">合同</string>

    <string name="pact_no">合同编号：</string>
    <string name="pact_start_date">2017.06.17</string>
    <string name="pact_end_date">2017.08.17</string>
    <string name="com_name">本华宇安</string>
    <string name="com_addr">湖南 石家庄 华宇大厦</string>
    <string name="com_tel">06153277</string>
    <string name="com_con_name">安师大</string>
    <string name="com_con_tel">182573016283</string>
    <string name="com_con_ide">经理</string>
    <string name="date_biao">-</string>


    <string name="item_about">项目介绍</string>
    <string name="item_no">项目编号</string>
    <string name="item_status">项目状态</string>
    <string name="pro_type">食用菌栽培</string>
    <string name="rz_scope">加工</string>
    <string name="rz_type">有机认证</string>
    <string name="check_type">扩大认证</string>
    <string name="pro_info">产品信息</string>
    <string name="item_material">材料下载</string>
    <string name="item_report">报告上传</string>

    <string name="pro_no">产品编号</string>
    <string name="base_name">基地名称</string>
    <string name="base_addr">基地地址</string>
    <string name="base_area">基地面积</string>
    <string name="pro_ralue">产品产值</string>
    <string name="pro_name">产品名称</string>
    <string name="Organic_toppings">有机配料名称</string>
    <string name="Total_supply">配料供应总量</string>
    <string name="pro_output">预产量</string>
    <string name="pro_area">产品面积</string>
    <string name="pro_describe">产品描述</string>
    <string name="pro_num">产品数量</string>


    <string name="material_01">材料压缩包</string>
    <string name="material_02">资质文件</string>
    <string name="material_03">土地使用证明文件及合同</string>
    <string name="material_04">环境证明文件</string>
    <string name="material_05">图表类文件</string>
    <string name="material_06">申请书、调查表</string>
    <string name="material_07">手册、规程、内检等体系文件</string>
    <string name="material_08">其他文件</string>

    <string name="look">查看</string>
    <string name="choose">选择</string>
    <string name="delect">删除</string>
    <string name="clearCach">清除缓存</string>
    <string name="title_activity_settings">Settings</string>
</resources>
