<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@mipmap/im_loginbg"
    tools:context=".ui.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
           >
        <ImageView
        android:layout_height="match_parent"
        android:layout_width="50dp"
        android:src="@mipmap/ic_com_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="电商仓库ERP"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:textSize="20dp" />
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="25dp"-->
            <!--android:padding="@dimen/activity_horizontal_margin"-->
            <!--android:orientation="horizontal"-->
            <!--android:background="@mipmap/bg_et_login">-->

            <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:src="@mipmap/ic_account" />-->

            <!--<Spinner-->
                <!--android:id="@+id/et_serurl"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:paddingLeft="8dp"-->
                <!--android:textSize="@dimen/sp_28"-->
                <!--android:textColor="@color/white"-->
                <!--android:textColorHint="@color/white2"-->
                <!--android:theme="@style/SpnStyle"/>-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="0.5dp"-->
            <!--android:padding="@dimen/activity_horizontal_margin"-->
            <!--android:orientation="horizontal"-->
            <!--android:background="@mipmap/bg_et_login">-->

            <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:src="@mipmap/ic_comm" />-->

            <!--<EditText-->
                <!--android:id="@+id/et_comm"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@null"-->
                <!--android:hint="@string/Input_comm"-->
                <!--android:paddingLeft="8dp"-->
                <!--android:textSize="@dimen/sp_28"-->
                <!--android:textColor="@color/white"-->
                <!--android:textColorHint="@color/white2" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:background="@mipmap/bg_et_login">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/ic_account" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/Input_useracc"
                android:paddingLeft="8dp"
                android:textSize="@dimen/sp_38"
                android:textColor="@color/white"
                android:textColorHint="@color/white2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="0.5dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:background="@mipmap/bg_et_login">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_password" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/Input_password"
                android:paddingLeft="8dp"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_38"
                android:textColor="@color/white"
                android:textColorHint="@color/white2" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:background="@mipmap/bg_big_login"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="45dp"
            android:text="@string/login"
            android:textSize="@dimen/sp_38"
            android:textColor="@color/black"
       />
    </LinearLayout>
</LinearLayout>
